--- a/.github/workflows/daily_analysis.yml
+++ b/.github/workflows/daily_analysis.yml
@@ -11,7 +11,7 @@ on:
       ticker:
         description: 'Stock ticker to analyze'
         required: false
-        default: 'AAPL'
+        default: 'GLD'
 
 jobs:
   analyze:
